# power_spectra

./: .gitignore  LICENSE  README  README.md  TimmerKoenig.ipynb  fit_qpo.py  multi_powerspec.py  plot_powerspec.py  powerspec.py  rebin_powerspec.py  run_powerspec.sh  segment_fits.py  setup.cfg  setup.py  tools.py
power_spectra/: __init__.py  fit_qpo.py  plot_multi_psds.py  psd_lightcurves.py
scripts/: loop_powerspec.sh  run_powerspec.sh
