[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = power_spectra
description = Averaged power spectra of RXTE data.
long_description = This software reads in (multiple) RXTE event lists, makes an averaged power spectrum, re-bins the power spectrum in frequency, and plots it.
author = Abigail Stevens
author_email = A.L.Stevens@uva.nl
license = MIT
edit_on_github = False
github_project = abigailStev/power_spectra
